src/objects/OperatingSchedule__c.object
<CustomObject>
    <description>KTS-1103  Operating Work Orders in  Salesforce:   this Objects stores the  Operating Schedules for each Coffee Machine. These schedules defines which Jobs( Work Order Line Items) will be generated and send to ClickSoftware as Tasks.  The operator will pick them up and  executes them in his route for the day.</description>
    <fields>
        <fullName>Account_Location_Name__c</fullName>
        <label>Account Location Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Operating Schedules</relationshipLabel>
        <relationshipName>Operating_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Operating:  indicates whether the Schedule is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Unique_Number__c</fullName>
        <label>Asset Unique Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottle_Months__c</fullName>
        <inlineHelpText>Please provide the month(s) for which a bottle job will need to be created.</inlineHelpText>
        <label>Bottle Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Friday__c</fullName>
        <label>Cups 5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Monday__c</fullName>
        <inlineHelpText>Day 1 is always equal to the Start Date and can be in the past.</inlineHelpText>
        <label>Cups 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Saturday__c</fullName>
        <label>Cups 6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Sunday__c</fullName>
        <label>Cups 7</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Thursday__c</fullName>
        <label>Cups 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Tuesday__c</fullName>
        <label>Cups 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_1_Wednesday__c</fullName>
        <label>Cups 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Friday__c</fullName>
        <label>Cups 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Monday__c</fullName>
        <label>Cups 8</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Saturday__c</fullName>
        <label>Cups 13</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Sunday__c</fullName>
        <label>Cups 14</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Thursday__c</fullName>
        <label>Cups 11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Tuesday__c</fullName>
        <label>Cups 9</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C_2_Wednesday__c</fullName>
        <label>Cups 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descaling_Months__c</fullName>
        <inlineHelpText>Please provide the month(s) for which a descaling job will need to be created.</inlineHelpText>
        <label>Descaling Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ForceScheduleToNextBusinessDay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This allows to force L task on a holiday for full operating with non 24/7 to be scheduled on the next business day (when true)</description>
        <inlineHelpText>This allows to force L task on a holiday for full operating with non 24/7 to be scheduled on the next business day (when true)</inlineHelpText>
        <label>Force L to next buss. day (holiday)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FrequencyofL__c</fullName>
        <inlineHelpText>Please specify the frequencey for L jobs to be generated by the system.</inlineHelpText>
        <label>Frequency of L</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingredients_Months__c</fullName>
        <label>Ingredients Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interval_in_Weeks__c</fullName>
        <inlineHelpText>Please determine the interval per weeks for which an operating task should be executed.</inlineHelpText>
        <label>Interval in Weeks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Friday__c</fullName>
        <label>Large 5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Monday__c</fullName>
        <inlineHelpText>Day 1 is always equal to the Start Date and can be in the past.</inlineHelpText>
        <label>Large 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Saturday__c</fullName>
        <label>Large 6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Sunday__c</fullName>
        <label>Large 7</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Thursday__c</fullName>
        <label>Large 4</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Tuesday__c</fullName>
        <label>Large 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_1_Wednesday__c</fullName>
        <label>Large 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Friday__c</fullName>
        <label>Large 12</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Monday__c</fullName>
        <label>Large 8</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Saturday__c</fullName>
        <label>Large 13</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Sunday__c</fullName>
        <label>Large 14</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Thursday__c</fullName>
        <label>Large 11</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Tuesday__c</fullName>
        <label>Large 9</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LM_2_Wednesday__c</fullName>
        <label>Large 10</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L_Months__c</fullName>
        <inlineHelpText>Please provide the month(s) for which a large job will need to be created.</inlineHelpText>
        <label>L Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Batch_Date__c</fullName>
        <description>This field indicates the last time the batch was run for this schedule.</description>
        <label>Last Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Early_Start_Date__c</fullName>
        <label>Last Early Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Batch_Date__c</fullName>
        <formula>Last_Batch_Date__c + 7 *  VALUE(TEXT(Interval_in_Weeks__c))</formula>
        <label>Next Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OP_247Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Operating: Indication of the customer being opened also during holidays and weekends</description>
        <label>24/7 Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OP_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To map the holidays of the respective country to the record. Automatically filled upon creation</description>
        <inlineHelpText>Filled automatically</inlineHelpText>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Operating_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OperatingReady__c</fullName>
        <formula>Active__c
&amp;&amp; NOT(ISBLANK(PhysicalAsset__c)) 
&amp;&amp; NOT(ISBLANK(TypeofContract__c ))
&amp;&amp; PhysicalAsset__r.MothballAssetIndicator__c = FALSE
&amp;&amp; NOT(ISBLANK(PhysicalAsset__r.AccountLocation__c ))
&amp;&amp; OR(ISPICKVAL( PhysicalAsset__r.AssetStatus__c, &apos;Activated&apos;),ISPICKVAL(PhysicalAsset__r.AssetStatus__c, &apos;Pending Cancellation&apos;))
&amp;&amp; OR(ISPICKVAL( Schedule_Type__c, &apos;Regular&apos;),ISPICKVAL( Schedule_Type__c, &apos;Machine Clean Operating&apos;))
&amp;&amp; PhysicalAsset__r.EndDate__c &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operating Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Months__c</fullName>
        <inlineHelpText>Please provide the month(s) for which a preventive maintenance job will need to be created.</inlineHelpText>
        <label>PM Months</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalAssetName__c</fullName>
        <label>Physical Asset Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PhysicalAsset__c</fullName>
        <description>TS Operating, used to link an operating schedule to a Physical Asset record. via this  relationship  further information can be pulled onto the Schedule object</description>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Operating Schedules</relationshipLabel>
        <relationshipName>Operating_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PreferredOperator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Op indicates the  preferred operator for this  Machine</description>
        <label>Preferred Operator</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Operating Schedules</relationshipLabel>
        <relationshipName>Operating_Schedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Operator__c</fullName>
        <label>Preferred Operator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_1_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Day 1 is always equal to the Start Date and can be in the past.</inlineHelpText>
        <label>Rinse 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 6</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 7</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_1_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Friday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 12</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Monday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 8</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Saturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 13</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 14</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_2_Wednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rinse 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_1_Friday__c</fullName>
        <label>Small 5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_1_Monday__c</fullName>
        <inlineHelpText>Day 1 is always equal to the Start Date and can be in the past.</inlineHelpText>
        <label>Small 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_1_Saturday__c</fullName>
        <label>Small 6</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>